--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
       - name: Generate Prisma Client
         run: npx prisma generate
         working-directory: packages/web
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Type check UI library
         run: npm run type-check --workspace=packages/ui
@@ -64,6 +66,8 @@ jobs:
       - name: Generate Prisma Client
         run: npx prisma generate
         working-directory: packages/web
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Build UI library
         run: npm run build --workspace=packages/ui
