Setup component library.

--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -13,11 +13,9 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "@/components",
-    "molecules": "@/molecules",
-    "utils": "@/lib/utils",
     "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "utils": "@/lib/utils",
+    "hooks": "@/lib/hooks"
   },
   "registries": {}
 }
