--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,17 +1,20 @@
 {
-    "compilerOptions": {
-        "target": "ES2020",
-        "lib": ["ES2020", "DOM", "DOM.Iterable"],
-        "jsx": "react-jsx",
-        "module": "esnext",
-        "moduleResolution": "bundler",
-        "strict": true,
-        "declaration": true,
-        "declarationMap": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "outDir": "./dist"
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "jsx": "react-jsx",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "strict": true,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "outDir": "./dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
