--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.6.1",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
+    "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "react": "19.2.0",
@@ -44,7 +44,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.6",
+    "eslint-config-next": "^16.1.1",
     "prisma": "^7.0.1",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
