--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -4,9 +4,9 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.ts",
-    "css": "src/app/globals.css",
-    "baseColor": "slate",
+    "config": "",
+    "css": "devboard.css",
+    "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
   },
@@ -15,6 +15,7 @@
     "components": "@/components",
     "ui": "@/components/ui",
     "utils": "@/lib/utils",
+    "lib": "@/lib",
     "hooks": "@/lib/hooks"
   },
   "registries": {}
