--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "",
+    "config": "tailwind.config.ts",
     "css": "devboard.css",
     "baseColor": "neutral",
     "cssVariables": true,
@@ -12,11 +12,11 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "ui": "@/components/ui",
-    "utils": "@/lib/utils",
-    "lib": "@/lib",
-    "hooks": "@/lib/hooks"
+    "components": "./src/components",
+    "ui": "./src/components/ui",
+    "utils": "./src/lib/utils",
+    "lib": "./src/lib",
+    "hooks": "./src/lib/hooks"
   },
   "registries": {}
 }
