--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,13 @@
   },
   "peerDependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^3.0.0",
+    "tailwindcss-animate": "^1.0.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/compat": "^2.0.0",
@@ -32,6 +38,7 @@
     "globals": "^14.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "tailwindcss": "^4.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0"
   },
@@ -83,8 +90,6 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
@@ -96,8 +101,6 @@
     "react-resizable-panels": "^4.4.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.5"
   }
