--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,15 +19,11 @@
     "@devboard-interactive/ui": "*",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slot": "^1.2.4",
     "@sentry/nextjs": "^10.29.0",
+    "@tanstack/react-form": "^1.27.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.6.1",
-    "lucide-react": "^0.556.0",
     "next": "^16.1.1",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
