--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,15 +28,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Generate Prisma Client
-        run: npx prisma generate
-        working-directory: packages/web
+      - name: Build UI library
+        run: npm run build --workspace=packages/ui
 
       - name: Type check UI library
         run: npm run type-check --workspace=packages/ui
 
-      - name: Build UI library
-        run: npm run build --workspace=packages/ui
+      - name: Typegen Web App
+        run: npm run typegen --workspace=packages/web
 
       - name: Type check Web app
         run: npm run type-check --workspace=packages/web
