--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,6 +8,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "typegen": "next typegen",
     "lint": "eslint",
     "type-check": "tsc --noEmit",
     "db:migrate": "prisma migrate dev",
