--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,7 @@
   ],
   "exports": {
     "./devboard.css": "./devboard.css",
+    "./base.css": "./base.css",
     "./*": "./dist/components/ui/*.mjs"
   },
   "scripts": {
